scrollBy offset to 40 to align nav li a clicks with content top, data-offset(spying) to 50 change active class at correct position

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -108,6 +108,10 @@ a {
   padding: 0;
 }
 
+/* #About, #Work, #Education, #Contact {
+  padding-top: 75px;
+} */
+
 /**********  Header  **********/
 header {
   font-weight: 500;
